0.743 (07.25.2006) - John Siracusa <siracusa@mindspring.com>

    * Minor tweaks to the subselect-based limit/offset code.

0.742 (07.21.2006) - John Siracusa <siracusa@mindspring.com>

    * Added support for a more efficient subselect-based limit/offset 
      implementation for queries that would otherwise have to be
      scanned through manually.
    * Added a column class for PostgreSQL's BYTEA column type.
    * Added support for DBI bind_param() attributes for all column types.
    * Fixed a bug in the test suite that could cause the TIME(9)
      column type test to fail in Postgres.
    * Fixed some POD formatting errors.

0.741 (07.14.2006) - John Siracusa <siracusa@mindspring.com>

    * Added end_of_month_mode parameter to the interval column class.
    * Prevented perl_* code generation methods from attempting to 
      auto-initialize missing metadata.
    * Added name/value pair, JSON, and YAML helper methods.
    * Tweaked the JOIN syntax for MySQL in order to better accommodate
      MySQL version 5.0.12+.  (Reported by Glenn Gallien)
    * Some small POD corrections.

0.74 (06.30.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the Time column type.
    * Added support for the changes_only parameter to the insert() method.
    * Documented the manager_base_class(es) Loader methods.
    * Fixed a bug that caused the Loader to refuse to use empty or 
      undefined class_prefix values.
    * Fixed a bug that prevented auto_* methods names from working in
      calls to the setup() method.
    * Removed redundant @ISA declaration from generated Manager classes.

0.731 (06.12.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a database handle leak in the get_objects_iterator() method.
      (Reported by Martin Rubli)
    * Documented the changes_only parameter to the save() and update()
      methods.  (This feature was actually implemented in version 0.73, but 
      I forgot to document it.)