@@ -210,6 +210,7 @@ foreach my $db_type (qw(mysql pg informix sqlite))
   if($Have_YAML)
   {
     local $YAML::Syck::SortKeys = 1;
+    $YAML::Syck::SortKeys = 1; # quiet stupid perl 5.6.x warning
     my $yaml = $o->column_values_as_yaml;
     is($yaml, "--- \nage: 6\nid: 2\nlaz: Z2\nname: Alex3\n",
        "column_values_as_yaml() - $db_type");
