@@ -63,7 +63,7 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         or         => [ and => [ '!bits' => '00001', bits => { ne => '11111' } ],
                         and => [ bits => { lt => '10101' }, '!bits' => '10000' ] ],
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         fk1        => 2,
         last_modified => { le => 'now' },
@@ -112,7 +112,7 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         status     => 'active',
         bits       => '00001',
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         nums       => { all_in_array => [ 1, 3 ] },
         '!nums'    => { all_in_array => [ 1, 5, 9 ] }, 
@@ -146,7 +146,7 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         status     => 'active',
         bits       => '00001',
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => 'now' },
         date_created  => '2004-03-30 12:34:56',
@@ -182,7 +182,7 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         status     => 'active',
         bits       => '00001',
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => 'now' },
         date_created  => '2004-03-30 12:34:56',
@@ -213,7 +213,7 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         status     => 'active',
         bits       => '00001',
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => 'now' },
         date_created  => '2004-03-30 12:34:56',
@@ -7851,7 +7851,7 @@ SKIP: foreach my $db_type (qw(sqlite))
         status     => 'active',
         bits       => q(b'00001'),
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => $o->db->format_timestamp(DateTime->now->add(days => 2)) },
         date_created  => '2004-03-30 12:34:56.000000000',
@@ -7880,7 +7880,7 @@ SKIP: foreach my $db_type (qw(sqlite))
         status     => 'active',
         bits       => q(b'00001'),
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => $o->db->format_timestamp(DateTime->now->add(days => 2)) },
         date_created  => '2004-03-30 12:34:56.000000000',
@@ -7916,7 +7916,7 @@ SKIP: foreach my $db_type (qw(sqlite))
         status     => 'active',
         bits       => q(b'00001'),
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => $o->db->format_timestamp(DateTime->now->add(days => 2)) },
         date_created  => '2004-03-30 12:34:56.000000000',
@@ -7946,7 +7946,7 @@ SKIP: foreach my $db_type (qw(sqlite))
         status     => 'active',
         bits       => q(b'00001'),
         start      => '2001-01-02',
-        save_col   => [ 1, 5 ],
+        save       => [ 1, 5 ],
         nums       => '{1,2,3}',
         last_modified => { le => $o->db->format_timestamp(DateTime->now->add(days => 2)) },
         date_created  => '2004-03-30 12:34:56.000000000',
